syntax = "proto3";

package saphe.protobuf;

option java_package = "com.saphe.communication_types.dto";
option csharp_namespace = "Saphe.Protobuf.Public.V1.Dto";

message MobileDeviceModelDto {
	string name					= 1;
	string manufacturerName		= 2;
}